2000-02-02  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/mq2.c, transports/mailbox/mailbox.c, transports/sm/sm.c,
	  transports/smtp/smtp.h, transports/smtp/smtptls.c,
	  transports/smtp/smtp.c, transports/smtp/appendlet.c:
	    Turns out the  sfsetfd()  has a undesirable side-effect,
	    which might be turnable off, but...  Namely it does sfsync()
	    on the stream before setting the fd -- we don't want that.

	* libsh/io.c, router/functions.c, router/prototypes.h,
	  router/rtsyslog.c, smtpserver/smtprouter.c,
	  transports/libta/diagnostic.c:
	    Cleaned up several GCC 2.96 reported/complained things.
	    (Couple of which stopped compilation..)

	* transports/smtp/smtp.c:
	    More of hunting of strange errors at protocol transmission.

	* smtpserver/smtpserver.c:
	    When reporting '-- pipeline input exists', do that immediately
	    after collecting previous input line, not after SYNCing out
	    previous reply.

2000-02-01  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/appendlet.c, transports/smtp/smtp.h,
	  transports/smtp/smtptls.c,   transports/smtp/smtp.c:
	    More of the same work as yesterday evening/today early morning..

	* transports/smtp/smtp.c, transports/smtp/smtptls.c,
	  transports/libta/swriteheaders.c:
	    Some code rearrangements to better(?) handle stream
	    write errors.

2000-01-31  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* utils/mxverify/mxverify-cgi.c:
	    Move "test with user-suppled address" before the
	    "test with postmaster" case.  In case the Postmaster
	    doesn't exist (which is an error in itself, though..),
	    the user supplied address was tested very least.

2000-01-25  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtp.c, transports/smtp/appendlet.c:
	    Small error test rearrangements so that if  sferror()
	    is set at the output stream, no writing will happen.

2000-01-24  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/libta/swriteheaders.c, transports/libta/fwriteheaders.c: