@@ -1,6 +1,6 @@
 %!PS-Adobe-3.0
 %%Creator: groff version 1.15
-%%CreationDate: Fri Jan  7 07:42:40 2000
+%%CreationDate: Wed Feb  2 23:03:58 2000
 %%DocumentNeededResources: font Times-Roman
 %%+ font Times-Bold
 %%+ font Times-Italic
@@ -323,7 +323,7 @@ R/F2 10/Times-Bold@0 SF(ST)2.65 E(AR)-.9 E(TTLS)-.4 E F0 2.65(,t)C .151
 1.326(meout to w).35 F 1.326(ait at lo)-.1 F(wle)-.25 E -.15(ve)-.25 G
 3.826(lT).15 G 1.326(CP sock)-3.826 F 1.327
 (et write\(\) routines for the sock)-.1 F 1.327(et to accept some)-.1 F
-(more input.)180 300 Q(The def)5 E(ault is 3 minutes.)-.1 E(cmd=)144
+(more input.)180 300 Q(The def)5 E(ault is 5 minutes.)-.1 E(cmd=)144
 316.8 Q F1(5m)A F0(\(or plain v)2.5 E(alue\))-.25 E -.8(Wa)180 328.8 S
 (iting for command replies \(e.g. MAIL FR).8 E(OM, et.al.\))-.4 E
 (The def)5 E(ault is 5 minutes.)-.1 E(data=)144 345.6 Q F1(2m)A F0
@@ -334,7 +334,7 @@ R/F2 10/Times-Bold@0 SF(ST)2.65 E(AR)-.9 E(TTLS)-.4 E F0 2.65(,t)C .151
 (hase ending "." issuance until "250 OK" report reception \(this is)
 -2.577 F F2(after)2.576 E F0(the)2.576 E .334
 (TCP write pipeline has completed\).)180 398.4 R .334(The def)5.334 F
-.334(ault is 60 minutes. \(RFC 1123 gi)-.1 F -.15(ve)-.25 G 2.835(s1).15
+.334(ault is 20 minutes. \(RFC 1123 gi)-.1 F -.15(ve)-.25 G 2.835(s1).15
 G 2.835(0m)-2.835 G(in-)-2.835 E(utes.\))180 410.4 Q 20.64(\255V prints)
 108 427.2 R 2.5(av)2.5 G(ersion message and e)-2.65 E(xits.)-.15 E 18.42
 (\255W turns)108 444 R .391
